added heading to index file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Homelessness in America</title>
 </head>
 <body>
-    
+    <main>
+<header>Japhire's Homeless Exposition</header>
+<article>
+<h1>Homelessness</h1>
+<p> Homelessness in the United States refers to the issue of homelessness, a condition wherein people lack "a fixed, regular, and adequate nighttime residence" as defined by The McKinney–Vento Homeless Assistance Act. 
+    Point-in-time single night counts prepared by shelter providers differ greatly from federal government accounts. In 2014, approximately 1.5 million sheltered homeless people were counted.
+    The federal government statistics are prepared by the United States Department of Housing and Urban Development's Annual Homeless Assessment Report; as of 2018, HUD reported there were roughly 553,000 homeless people in the United States on a given night,or 0.17% of the population. 
+    Annual federal HUD reports contradict private state and local reports where homelessness is shown to have increased each year since 201 across several major American cities, with 40 percent increases noted in 2017 and in 2019. 
+    In January of 2018 the federal government statistics gave comprehensive encompassing nationwide statistics, with a total number of 552,830 individuals, of which 358,363 (65%) were sheltered in provided housing, while some 194,467 (35%) were unsheltered.</p>
+
+</article>
+<footer></footer>
+
+    </main>
 </body>
 </html>
