add content to index page

--- a/index.html
+++ b/index.html
@@ -11,12 +11,41 @@
 <header>Japhire's Homeless Exposition</header>
 <article>
 <h1>Homelessness</h1>
-<p> Homelessness in the United States refers to the issue of homelessness, a condition wherein people lack "a fixed, regular, and adequate nighttime residence" as defined by The McKinney–Vento Homeless Assistance Act. 
-    Point-in-time single night counts prepared by shelter providers differ greatly from federal government accounts. In 2014, approximately 1.5 million sheltered homeless people were counted.
-    The federal government statistics are prepared by the United States Department of Housing and Urban Development's Annual Homeless Assessment Report; as of 2018, HUD reported there were roughly 553,000 homeless people in the United States on a given night,or 0.17% of the population. 
-    Annual federal HUD reports contradict private state and local reports where homelessness is shown to have increased each year since 201 across several major American cities, with 40 percent increases noted in 2017 and in 2019. 
-    In January of 2018 the federal government statistics gave comprehensive encompassing nationwide statistics, with a total number of 552,830 individuals, of which 358,363 (65%) were sheltered in provided housing, while some 194,467 (35%) were unsheltered.</p>
-
+<p> Homelessness in the United States refers to the issue of homelessness, a condition wherein 
+    people lack "a fixed, regular, and adequate nighttime residence" as defined by 
+    The McKinney–Vento Homeless Assistance Act. Point-in-time single night counts prepared
+     by shelter providers differ greatly from federal government accounts. In 2014, approximately 1.5 million sheltered homeless
+     people were counted.The federal government statistics are prepared by the United States 
+     Department of Housing and Urban Development's Annual Homeless Assessment Report; 
+     as of 2018, HUD reported there were roughly 553,000 homeless people in the United States 
+     on a given night,or 0.17% of the population. Annual federal HUD reports contradict private state 
+    and local reports where homelessnessis shown to have increased each year since 201 across several major American cities, with 40 
+     percent increases noted in 2017 and in 2019.In January of 2018 the federal government 
+     statistics gave comprehensive encompassing nationwide statistics, with a total number of
+      552,830 individuals, of which 358,363 (65%) were sheltered in provided housing, while
+     some 194,467 (35%) were unsheltered.</p>
+    <p> There is an urgent need for the government to overhaul its approach to homelessness. 
+        Even before the coronavirus pandemic, millions of American families struggled to afford a 
+        safe place to live — a housing crisis driven primarily by soaring prices in major 
+        metropolitan areas. The pandemic has made a bad situation that much worse. The clear 
+        goal of federal policy ought to be the minimization of homelessness. The first step is
+         for the federal government to get its arms around the problem. It should require every
+          community that receives federal funding for programs intended to help the homeless
+           to emulate Kern County and a growing number of other cities and counties that 
+           track people who are homeless, by name, throughout the year. Local governments,
+         of course, needn’t wait for federal prodding to get started.</p>
+         <p> The counting process also is less precise than might be implied by the resulting federal 
+            report that put the number of homeless Americans at exactly 567,715. Cities generally rely 
+            on volunteers, and larger cities often sample rather than attempt a comprehensive count. 
+            New York, for example, divides the city into 7,000 zones, and then actually tries to count
+             the number of homeless people in 1,500 of those zones. Advocacy groups have highlighted
+            long lists of blind spots, including people who are in hospitals on the night of the 
+            count and therefore not tallied. In recent years, New York has paid people to pretend
+            to be homeless, to check the accuracy of its survey teams. There’s good reason to 
+            worry: A 2008 study that tested the technique found that the counters missed 29
+            percent of the “homeless” actors. But most cities don’t impose similar quality
+             controls and submit what amounts to an estimate. </p>
+             
 </article>
 <footer></footer>
 
