added source resource

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             worry: A 2008 study that tested the technique found that the counters missed 29
             percent of the “homeless” actors. But most cities don’t impose similar quality
              controls and submit what amounts to an estimate. </p>
-             
+        <p> Above content was pulled from <a href="https://www.nytimes.com" target="_blank">New York Times</a></p>
 </article>
 <footer></footer>
 
